# orcamento-condominio

./: .dockerignore  .gitignore  .gitlab-ci.yml  BACKUP.md  DOCKER.md  Dockerfile  INSTRUCOES_DISTRIBUICAO.md  MIGRATIONS.md  OrcamentoFlores.spec  PRD.md  Proposta Orçamentária 2026 .xlsx  README.md  alembic.ini  build.sh  build_windows.py  clean_duplicates.py  create_package.py  docker-compose.yml  exemplo_lotes.py  index.html  init_db.py  main.py  migrate_add_users.py  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pytest.ini  requirements.txt  reset_db.py  run.sh  run_tests.sh  seed.sh  start.sh  test_api.py  vite.config.ts
alembic/: README.md  env.py
app/: __init__.py  database.py
docker/: entrypoint.sh  init-db.sh  nginx.conf  supervisord.conf
e2e/: backup.spec.ts  categories.spec.ts  comparison.spec.ts  mock-server.mjs  navigation.spec.ts  parameters.spec.ts  scenarios.spec.ts
migrations/: fix_categories.py  init_db.py  migrate_categories_timestamps.py  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs
src-tauri/src/commands/: analysis.rs  backup.rs  categories.rs  items.rs  mod.rs  network.rs  parameters.rs  pdf.rs  scenarios.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/models/: category.rs  item.rs  mod.rs  parameters.rs  scenario.rs  value.rs
src-tauri/src/services/: analysis_service.rs  backup_service.rs  budget_service.rs  mod.rs  pdf_service.rs
src-tauri/tests/: integration_tests.rs
(+82 files in other folders)
